adding warning at bottom for >30 issues

--- a/single-repo.html
+++ b/single-repo.html
@@ -25,6 +25,10 @@
   <!--this is the div for the returned issues-->
   <div id="issues-container" class="list-group">
   </div>
+
+  <div id="limit-warning">
+    
+  </div>
   </main>
 
   <script src="./assets/js/single.js"></script>
