--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
         </form>
       </div>
       </div>
+    <!--new div for searchin gby class of issues-->
+      <div class ="card">
+        <h3 class ="card-header text-uppercase">Search by Topic</h3>
+        <div class="card-body" id="language-buttons">
+          <button class="btn" data="data-language">JavaScript</button>
+          <button class="btn" data="data-language">HTML</button>
+          <button class="btn" data="data-language">CSS</button>
+        </div>
+      </div>
+    
     <!--container for the results from the fetch-->
       <div class="col-12 col-md-8">
         <h2 class="subtitle">Showing Repositories for: <span id="repo-search-term"></span></h2>
